Função de notificação atualizada
