# storage/api-docs/api-docs.json
@@ -1192,6 +1192,200 @@
                 ]
             }
         },
+        "/notifications/": {
+            "get": {
+                "tags": [
+                    "notifications"
+                ],
+                "summary": "Notifications",
+                "description": "Retornando as notificações do usuério e removendo os convites desatualizados, ordenados pela ordem de criação",
+                "operationId": "notifications",
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "notifications": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "integer"
+                                                    },
+                                                    "type": {
+                                                        "type": "integer"
+                                                    },
+                                                    "user_id": {
+                                                        "type": "integer"
+                                                    },
+                                                    "read": {
+                                                        "type": "boolean"
+                                                    },
+                                                    "event_id": {
+                                                        "type": "array",
+                                                        "items": {
+                                                            "properties": {
+                                                                "type": {
+                                                                    "type": "integer"
+                                                                },
+                                                                "title": {
+                                                                    "type": "string"
+                                                                },
+                                                                "code": {
+                                                                    "type": "string"
+                                                                },
+                                                                "category": {
+                                                                    "type": "string"
+                                                                },
+                                                                "start_time": {
+                                                                    "type": "datetime"
+                                                                },
+                                                                "end_time": {
+                                                                    "type": "datetime"
+                                                                },
+                                                                "location": {
+                                                                    "type": "string"
+                                                                },
+                                                                "description": {
+                                                                    "type": "string"
+                                                                },
+                                                                "img": {
+                                                                    "type": "string"
+                                                                },
+                                                                "value": {
+                                                                    "type": "double"
+                                                                },
+                                                                "user_id": {
+                                                                    "type": "integer"
+                                                                },
+                                                                "tags": {
+                                                                    "type": "string"
+                                                                },
+                                                                "recurrence": {
+                                                                    "type": "string"
+                                                                }
+                                                            },
+                                                            "type": "object"
+                                                        }
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object",
+                                    "example": {
+                                        "notifications": [
+                                            {
+                                                "id": 2,
+                                                "user_id": 1,
+                                                "event_id": {
+                                                    "id": 7,
+                                                    "type": 1,
+                                                    "category": "teste",
+                                                    "title": " LUNCH ‘N’ LEARN – MERO 2",
+                                                    "code": "#1",
+                                                    "start_time": "2020-03-03 17:58:25",
+                                                    "end_time": "2020-03-04 19:58:25",
+                                                    "location": "SALA 2",
+                                                    "description": "",
+                                                    "recurrence": "none",
+                                                    "img": "1",
+                                                    "value": 10,
+                                                    "user_id": 1,
+                                                    "event_id": null,
+                                                    "boost": 0,
+                                                    "created_at": null,
+                                                    "updated_at": null
+                                                },
+                                                "type": 2,
+                                                "read": 0,
+                                                "created_at": "2020-03-06 21:00:36",
+                                                "updated_at": "2020-03-06 21:00:36"
+                                            },
+                                            {
+                                                "id": 1,
+                                                "user_id": 1,
+                                                "event_id": {
+                                                    "id": 15,
+                                                    "type": 1,
+                                                    "category": "1",
+                                                    "title": "sasaasa",
+                                                    "code": "#a101",
+                                                    "start_time": "2019-12-28 20:45:12",
+                                                    "end_time": "2019-08-30 23:05:12",
+                                                    "location": "Carrin",
+                                                    "description": "legal",
+                                                    "recurrence": "none",
+                                                    "img": null,
+                                                    "value": 10,
+                                                    "user_id": 1,
+                                                    "event_id": null,
+                                                    "boost": 0,
+                                                    "created_at": "2020-03-06 20:59:04",
+                                                    "updated_at": "2020-03-06 20:59:04"
+                                                },
+                                                "type": 1,
+                                                "read": 0,
+                                                "created_at": "2020-03-06 20:59:04",
+                                                "updated_at": "2020-03-06 20:59:04"
+                                            }
+                                        ]
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    }
+                }
+            }
+        },
+        "/notifications/markAsRead/{id}": {
+            "put": {
+                "tags": [
+                    "Notifications"
+                ],
+                "summary": "Marca como lida uma notificação",
+                "description": "Marca como lida uma notificação",
+                "operationId": "notification_markAsRead",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "404": {
+                        "description": "Notificação não encontrada"
+                    }
+                }
+            }
+        },
+        "/notifications/{id}": {
+            "delete": {
+                "tags": [
+                    "Notifications"
+                ],
+                "summary": "Deleta uma notificação",
+                "description": "Remove uma notificação com o id enviado",
+                "operationId": "notification_delete",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "404": {
+                        "description": "Notificação não encontrada"
+                    }
+                }
+            }
+        },
         "/participation": {
             "post": {
                 "tags": [
@@ -1575,6 +1769,10 @@
                 "description": "Find out more",
                 "url": "http://swagger.io"
             }
+        },
+        {
+            "name": "notifications",
+            "description": "notifications"
         },
         {
             "name": "participation",
